--- a/app_pack/templates/text_page.html
+++ b/app_pack/templates/text_page.html
@@ -14,6 +14,6 @@
         <div class="text_head">{{ head }}</div>
         <div class="text_body">{{ body|safe }}</div>
         <div class="text_coln">{{ colontitul }}</div>
-    </div>>
+    </div>
 </body>
 </html>
