--- a/app_pack/templates/title.html
+++ b/app_pack/templates/title.html
@@ -64,6 +64,11 @@
                         </div>
                     </div>
 
+                    <div class="indent"></div>
+                    <div class="bottom">
+                        <a href="{{ url_for('search_by_picture') }}" class="bottom">Найти кадр</a>
+                    </div>
+
                     {% if current_user.is_authenticated %}
                         <div class="indent"></div>
                         <div class="bottom">
